--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
 </head>
 
 <body>
-    <table ng-controller="MultiplicationCtrl">
-        <tr ng-repeat="numberA in numbers">
-            <td ng-repeat="numberB in numbers">
-                {{ numberA * numberB }}
-            </td>
-        </tr>
-    </table>
+    <div ng-controller="MultiplicationCtrl" initial-number-limit="10">
+        Enter a number :
+        <input type="number" ng-model="numberLimit" placeholder="Key in a number" />
+        <table>
+            <tr ng-repeat="numberA in numbers()">
+                <td ng-repeat="numberB in numbers()">
+                    {{ compute(numberA, numberB) }}
+                </td>
+            </tr>
+        </table>
+    </div>
     <script src="app.js" type="text/javascript"></script>
 </body>
 
